well done website

--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <title>Document</title>
 </head>
 <body>
+
+    <section>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure, voluptatum!</p>
+    </section>
+
+    <div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, eum.</p>
+    </div>
+
+    <footer>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse necessitatibus vitae officia dolorum, dolores quia omnis eligendi eveniet quas ipsam.git </p>
+    </footer>
     
 </body>
 </html>
