I do navbar work

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <footer>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse necessitatibus vitae officia dolorum, dolores quia omnis eligendi eveniet quas ipsam.git </p>
     </footer>
+
+    <p>Naeem</p>
     
 </body>
 </html>
