well done website

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     </footer>
 
     <p>Naeem</p>
+
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ad dolores soluta reiciendis, rem recusandae quo!</p>
     
 </body>
 </html>
